--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/card.css">
 </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NNQ2L4K9C9');
+  </script>
+
 <body class="d-flex flex-column vh-100 bg-light">
     <%- include('../partials/navbar') %> 
     <nav class="navbar bg-white shadow">
