--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col-lg-5 offset-lg-2 mb-3">
             <div class="">
-              <div id="card" class="flashcard"> 
+              <div id="card" class="flashcard text-smaller"> 
                 <div class="card front text-center shadow">  
                   <div class="card-body d-block">
                     <div class="d-flex justify-content-center align-items-center min-height-300px">
@@ -50,14 +50,15 @@
                 </div> 
                 <div class="card back shadow invisible" id="back">
                   <div class="card-body">
-                    <div class="d-flex flex-column d-flex justify-content-center align-items-center min-height-300px">
-                      <div class="card-text m-4" id="pageB"><%- card.pageB %> </div>
+                    <div class="d-flex align-items-center min-height-300px loader-push-class">
+                      <div id="loader"></div>
+                      <div class="card-text m-4 mb-0 max-height-280px text-gradient" id="pageB"><%- card.pageB %> </div>
                     </div>
                   </div>
                   <div class="card-footer d-flex justify-content-center">
                     <!--<a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>-->
                     <div>
-                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-danger easy-btn" >Další</a>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-danger easy-btn" id="next-btn" >Další</a>
                     </div>
                   </div>
                 </div> 
@@ -76,6 +77,13 @@
               <div class="card-body text-center">
                 <h6><%= sectionName %> </h6>
                 <p class="text-muted">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
+                <div class="progress mb-2">
+                  <% if(progressStatus === 0){ %> 
+                    <div class="progress-bar bg-danger" role="progressbar"></div>
+                  <% } else { %> 
+                    <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%" ><%= progressStatus %>%</div>
+                  <% } %> 
+                </div>
               </div>
             </div>
           </div>
@@ -89,5 +97,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
     <script src="/js/jquery.flip.min.js" ></script>
     <script src="/js/flip.custom.js" ></script>
+    <script src="/js/custom.js"></script>
   </body>
 </html>
