--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -22,6 +22,12 @@
                         <%= user.email %> 
                     </div>
                     <div class="col-4 mb-3 fw-bold">
+                        <p>Počet nastudovaných kartiček</p>
+                    </div>
+                    <div class="col-8 mb-3">
+                        <%= user.cardsSeen %> 
+                    </div>
+                    <div class="col-4 mb-3 fw-bold">
                         <p>Datum registrace</p>
                     </div>
                     <div class="col-8 mb-3">
