--- a/views/category.ejs
+++ b/views/category.ejs
@@ -44,7 +44,7 @@
                     <div class="row py-2">
                         <div class="col-7">                    
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
-                                    <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
+                                    <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:#AF0171"></i><%= section.name %></p>
                                 <% } else { %>
                                     <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
                                 <% } %> 
