--- a/public/css/card.css
+++ b/public/css/card.css
@@ -58,6 +58,7 @@
     font-size: 0.8rem;
 }
 
+/*
 #pageB > p, #pageB > ul {
     text-align: justify;
 }
@@ -65,6 +66,7 @@
 #pageB > ul > li {
     padding-top: 0.8rem;
 }
+*/
 
 /* Text gradient fade */
   .text-gradient {
