--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -50,7 +50,7 @@
                 </div> 
                 <div class="card back shadow invisible" id="back">
                   <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-center min-height-300px loader-push-class">
+                    <div class="d-flex align-items-center min-height-300px loader-push-class">
                       <div id="loader"></div>
                       <div class="card-text m-4 mb-0 max-height-280px text-gradient" id="pageB"><%- card.pageB %> </div>
                     </div>
