--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -9,6 +9,12 @@
         <div class="row">
             <div class="col-sm-2 offset-1"><%= user.email %> </div>
             <div class="col-sm-2"><%= user.dateOfRegistration %> </div>
+            <% if(user.isPremium){ %> 
+                <div class="col-sm-1">Premium</div>
+            <% } else { %>
+                <div class="col-sm-1">-</div>
+            <% } %>
+            <div class="col-sm-1"><a href="/admin/<%=user._id%>/upgradeToPremium">Upgrade to premium</a></div>
             <hr>
         </div>
     <% } %> 
