--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -80,7 +80,7 @@
             <div class="card shadow">
               <div class="card-body text-center mt-5">
                 <h6><%= sectionName %> </h6>
-                <p class="text-muted">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
+                <p class="text-muted text-smaller">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
                 <div class="progress mb-2">
                   <% if(progressStatus === 0){ %> 
                     <div class="progress-bar bg-danger" role="progressbar"></div>
