--- a/views/category.ejs
+++ b/views/category.ejs
@@ -54,13 +54,21 @@
                         <div class="col-7">                    
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                     <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:#AF0171"></i><%= section.name %></p>
-                                <% } else { %>
+                                <% } else if (section.isPremium) { %>
+                                    <p class="m-0"><i class="fas fa-star me-2 golden"></i><%= section.name %></p>
+                                <% } else { %> 
                                     <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
-                                <% } %> 
+                                <% } %>
                         </div>
                         <div class="col-3">
                             <% if (!currentUser){ %> 
-                                <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>
+                                <% if(!section.isPremium){ %> 
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>    
+                                <% } else { %>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-warning disabled" style="float:right">Premium</a>
+                                <% } %>  
+                            <% } else if(!currentUser.isPremium && section.isPremium){ %> 
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-warning disabled" style="float:right">Premium</a>
                             <% } else if(currentUser.sections.includes(section._id)) { %> 
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
                             <% } else { %> 
@@ -97,9 +105,11 @@
                             <div class="col-5">                    
                                     <% if(currentUser && currentUser.sections.includes(section._id)) { %>
                                         <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
-                                    <% } else { %>
+                                    <% } else if (section.isPremium) { %>
+                                        <p class="m-0"><i class="fas fa-star me-2 golden"></i><%= section.name %></p>
+                                    <% } else { %> 
                                         <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
-                                    <% } %> 
+                                    <% } %>
                             </div>
                             <div class="col-2">
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/publish"" class="btn btn-sm btn-info">Zveřejnit</a>
@@ -144,6 +154,8 @@
         </div>
     </div>
 </div>
+
+<!-- Pouze admin - formular pro pridani sekce -->
 <% if (currentUser && currentUser.admin) { %>
 <div class="row">
     <div class="col-md-7 offset-md-4 mb-3 mt-4">
@@ -153,13 +165,19 @@
                     <div class="form-group row">
                         <label for="name" class="col-2 col-form-label">Přidat sekci</label>
                         <div class="col-4">
-                            <input type="text" class="form-control" id="name" name="name">
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Název sekce" required>
                         </div>
-                        <div class="col-3">
+                        <div class="col-2">
                             <input type="text" class="form-control-plaintext" id="category" name="category" value="<%= category.name %>" readonly>
                         </div>
-                        <div class="col-3">
-                            <button class="btn btn-danger btn-sm w-100">Přidat</button>
+                        <div class="col-2">
+                            <select class="form-select" name="isPremium" id="isPremium">
+                                <option value="zdarma">Zdarma</option>
+                                <option value="premium">Premium</option>
+                              </select>
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-danger w-100">Přidat</button>
                         </div>
                     </div>
                 </form>
