Stripe - daily payment

--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -53,6 +53,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
+                        <input type="radio" id="daily" name="product" value="daily" />
+                        <label for="daily">49 Kč denně</label><br />
                         <input type="radio" id="monthly" name="product" value="monthly" />
                         <label for="monthly">99 Kč měsíčně</label><br />
                         <input type="radio" id="yearly" name="product" value="yearly" />
