--- a/views/payments/failed.ejs
+++ b/views/payments/failed.ejs
@@ -1,2 +1,11 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<h1>Platba se nepovedla</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-12 offset-md-3">
+            <div class="card shadow text-center p-4">
+                <h3 class="mt-4">Platba se nezdařila :/</h3>
+                <h6 class="my-4">Omlouváme se, zkuste to prosím znovu</h6>
+            </div>
+        </div>
+    </div>
+</div>
