--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -3,75 +3,133 @@
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="card">
-                <div class="row p-3">
+                <div class="row p-3 pb-0">
                     <div class="col-12">
                         <h3>Můj účet</h3>
                     </div>
                 </div>
                 <div class="row p-3">
-                    <div class="col-4 mb-3 fw-bold">
+                    <div class="col-4 fw-bold">
                         <p>Jméno</p>
                     </div>
-                    <div class="col-8 mb-3">
+                    <div class="col-8">
                         <%= user.firstname %> <%= user.lastname %> 
                     </div>
-                    <div class="col-4 mb-3 fw-bold">
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>E-mail</p>
                     </div>
-                    <div class="col-8 mb-3">
+                    <div class="col-8">
                         <%= user.email %> 
                     </div>
-                    <div class="col-4 mb-3 fw-bold">
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>Počet nastudovaných kartiček</p>
                     </div>
-                    <div class="col-8 mb-3">
+                    <div class="col-8">
                         <%= user.cardsSeen %> 
                     </div>
-                    <div class="col-4 mb-3 fw-bold">
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>Datum registrace</p>
                     </div>
-                    <div class="col-8 mb-3">
+                    <div class="col-8">
                         <%= user.dateOfRegistration %> 
                     </div>
-                    <div class="col-4 mb-3 fw-bold">
+                    <hr />
+                    <div class="col-4 fw-bold">
+                        <p>Předplatné</p>
+                    </div>
+                    <% if(user.isPremium){ %>
+                    <div class="col-8">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <p class="mb-0">aktivní do <%= endDate %> </p>
+                            <button id="manage-billing-button" class="btn btn-sm btn-danger" type="submit">
+                                Správa předplatného
+                            </button>
+                        </div>
+                    </div>
+                    <% } else { %>
+                        <div class="col-8">
+                            <p class="mb-0">žádné</p>
+                        </div>
+                    <% } %> 
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>Heslo</p>
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 d-flex justify-content-end align-items-start">
                         <a href="/auth/user/changePassword" class="btn btn-danger btn-sm">Změnit heslo</a>
+                        <!--the following input transfers customer billing ID to Javascript -->
+                        <input type="text" id="customerID" name="customerID" value="<%= user.billingId %>" style="display:none" />
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <% if(!user.isPremium){ %> 
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="card mt-3">
                 <div class="row p-3">
                     <div class="col-12">
-                        <h3>Přejít na Premium</h3>
+                        <h3>Přejít na Premium (předplatné)</h3>
+                        <p class="text-muted mb-0">S účtem Premium získáte přístup k dalším stovkám kartiček ze všech oborů práva. Vyberte si mezi měsíčním a ročním předplatným. Ukončit jej můžete kdykoliv.</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <input type="radio" id="daily" name="product" value="daily" />
-                        <label for="daily">49 Kč denně</label><br />
-                        <input type="radio" id="monthly" name="product" value="monthly" />
-                        <label for="monthly">99 Kč měsíčně</label><br />
-                        <input type="radio" id="yearly" name="product" value="yearly" />
-                        <label for="yearly">990 Kč ročně</label><br />
-
-                        <button class="btn btn-primary" id="checkout-button" type="submit">
-                        Koupit
-                        </button>
-                        <button id="manage-billing-button" type="submit">
-                            Manage Billing
-                          </button>
-                          <input type="text" id="customerID" name="customerID" value="<%= user.billingId %>" />
+                <!--
+                <div class="row p-3 mb-2">
+                    <div class="col-sm-4">
+                        <input type="radio" class="btn-check" name="product" id="monthly" value="monthly">
+                        <label class="btn btn-outline-danger w-100" for="monthly">99 Kč / měsíc</label>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="radio" class="btn-check" name="product" id="yearly" value="yearly" >
+                        <label class="btn btn-outline-danger w-100" for="yearly">990 Kč / rok</label>
+                    </div>
+                    <div class="col-sm-4 d-flex">
+                        <button class="btn btn-danger w-100" id="checkout-button" type="submit">Aktivovat</button>
+                    </div>
+                </div>
+                -->
+                <div class="row p-3 pb-0 mb-3">
+                    <div class="col-sm-6">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">Měsíční</div>
+                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                <div class="price-tag-inner">
+                                    <span class="price">99 Kč</span> / <span class="period">měsíčně</span>
+                                </div>
+                            </div> 
+                            <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
+                            <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
+                            <div class="px-3 d-flex justify-content-center">
+                                <button class="btn btn-danger my-3" id="checkout-button-monthly" type="submit">Aktivovat</button> 
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">Roční</div>
+                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                <div class="price-tag-inner">
+                                    <span class="price">990 Kč</span> / <span class="period">ročně</span>
+                                </div> 
+                            </div>
+                            <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
+                            <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
+                            <div class="px-3 d-flex justify-content-center">
+                                <button class="btn btn-danger my-3" id="checkout-button-yearly" type="submit">Aktivovat</button> 
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <% } %> 
 </div>
 
 <script src="/js/jquery.min.js" ></script>
