--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -1,2 +1,16 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<h1>Děkujeme za platbu!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-12 offset-md-3">
+            <div class="card shadow text-center p-4">
+                <h3>Zaplaceno</h3>
+                <p class="my-4"><i class="far fa-check-circle fa-3x color-1"></i></p>
+                <h6>Děkujeme!</h6>
+                <p class="mt-3">Nyní můžete využít výhod InLege Premium naplno!</p>
+                <div class="d-flex justify-content-center mt-3">
+                    <a href="/" class="btn btn-sm btn-danger w-50">Pustit se do studia</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
