--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
+    <!-- META TAGS -->
+    <meta property="og:url"                content="https://www.inlege.cz/" />
+    <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
+    <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+    <meta property="og:image"              content="/fb_sharing.png" />
 </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
@@ -27,6 +32,7 @@
         <%- body %>
     </main>
     <%- include('../partials/footer') %> 
+    <%- include('../partials/cookiesBar')%>
     <!-- JS for Bootstrap -->
 
     <script src="/js/jquery.min.js" ></script>
