--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -34,6 +34,14 @@
                             Heslo musí obsahovat nejméně 6 znaků.
                         </div>
                     </div>
+                    <div class="mt-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="gdpr" id="gdpr" required>
+                            <label class="form-check-label" for="gdpr">
+                            Beru na vědomí <a href="/legal/gdpr">podmínky zpracování osobních údajů</a>
+                            </label>
+                        </div>
+                    </div>
                     <div>
                     <button class="btn btn-danger w-100 mt-3" type="submit">Zaregistrovat</button>
                     </div>
