--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -71,7 +71,7 @@
                   <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a>
                   <a href="/cards/remove/<%= card._id%>" class="text-muted mx-3">Odstranit kartu</a>
                 <% } %>
-                  <a href="#" class="text-muted">Nahlásit chybu</a>
+                  <a href="/cards/report/<%= card._id%>" target="_blank" class="text-muted">Nahlásit chybu</a>
                   <p class="text-muted mb-0 px-3 otacej-mezernikem">Otáčej [mezerníkem]</p>
               </div>
             </div>
