fb sharing bug fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/landing.css">
+    <!-- META TAGS -->
+    <meta property="og:url"                content="https://www.inlege.cz/" />
+    <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
+    <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+    <meta property="og:image"              content="/fb_sharing.png" />
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
