--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,7 +14,7 @@
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
     <meta property="og:description"        content="Stovky interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
-    <meta property="og:image"              content="/fb_sharing.png" />
+    <meta property="og:image"              content="/img/fb_sharing.png" />
 </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
