--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -168,3 +168,8 @@
     background: white;
     text-decoration: none;
 }
+
+/* NAVBAR */
+.navbar .nav-item .nav-link.premium {
+    color: #E80F88;
+}
