--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
         <ul class="navbar-nav ms-auto">
               <% if (!currentUser) { %>
                 <li class="nav-item">
-                  <a class="nav-link premium" href="/auth/user/login">Premium</a>
+                  <a class="nav-link premium" href="/premium">Premium</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/auth/user/login">Přihlásit se</a>
