--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -33,7 +33,7 @@
               <div class="row">
                   <div class="col-sm-5 offset-sm-1 my-5 p-4">
                     <h1 class="jumbotron-heading mb-3">InLege <br>Premium</h1>
-                    <p class="lead">InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však nabízíme máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</p>        
+                    <p class="lead">InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</p>        
                     <div class="mt-5">
                         <% if(!currentUser){ %> 
                             <a href="/auth/user/new" class="btn btn-lg btn-danger">Registrace zdarma</a>
