/premium minor design bug fix

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -52,7 +52,7 @@
         <section class="jumbotron main-header-premium">
             <div class="container d-flex flex-column justify-content-center align-items-center h-100 pb-5">
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                    <h1 class="jumbotron-heading my-3 text-center">InLege <span class="color-1">Premium</span></h1>
+                    <h1 class="jumbotron-heading my-3 mt-5 text-center">InLege <span class="color-1">Premium</span></h1>
                     <p class="lead text-center w-custom p-3 pb-5"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</strong></p>
                 </div>
                 <div class="price-table-wrapper">
