fixing height on iPhone for /premium

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -29,28 +29,8 @@
 
     <main role="main"> 
         <%- include('./partials/alert') %>
-        <!--
         <section class="jumbotron main-header-premium">
-          <div class="container">
-              <div class="row">
-                  <div class="col-sm-4 offset-sm-4 my-3 mt-5 p-4">
-                    <h1 class="jumbotron-heading mb-3 text-center">InLege <span class="color-1">Premium</span></h1>
-                    <p class="lead text-center"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</strong></p>        
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-6 offset-3">
-                    <div class="mb-5 d-flex justify-content-between align-items-center">
-                        <a href="/auth/user/new" class="btn btn-lg btn-danger">Roční předplatné (990 Kč)</a>
-                        <a href="/auth/user/new" class="btn btn-lg btn-danger">Měsíční předplatné (99 Kč)</a>
-                    </div>
-                </div>
-              </div>
-          </div>
-        </section>
-        -->
-        <section class="jumbotron main-header-premium">
-            <div class="container d-flex flex-column justify-content-center align-items-center h-100 pb-5">
+            <div class="container d-flex flex-column justify-content-center align-items-center pb-5">
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <h1 class="jumbotron-heading my-3 mt-5 text-center">InLege <span class="color-1">Premium</span></h1>
                     <p class="lead text-center w-custom p-3 pb-5"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</strong></p>
@@ -81,7 +61,6 @@
                         <div class="px-3 d-flex justify-content-center">
                             <a href="/auth/user/new" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
                         </div>
-                        
                     </div>
                 </div>
             </div>
